fixed issue in layout issue

--- a/assets/css/_header.scss
+++ b/assets/css/_header.scss
@@ -39,6 +39,7 @@ ul {
     flex:85%;
     list-style: none;
     display: flex;
+    align-content: center;
     justify-content: flex-end;
 }
 #icon {
